switch to a Document trait and introduce Script/Head/Style/Meta components (#2635)
* switch to a Document trait and introduce Script/Head/Style/Meta components

* Fix desktop title

* Insert special elements into the head during the inital SSR render

* Make all head component attributes optional

* hydrate head elements

* improve the server streaming head warning

* Document fullstack head hydration approach

* deduplicate head elements by href

* move Link into head::Link

* document head components

* add meta and title examples

* Fix a few doc examples

* fix formatting

* Add title to playwright tests

* serde is optional on web, but it is enabled by hydrate

* remove leftover console log

--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -11,12 +11,15 @@ keywords = ["dom", "ui", "gui", "react"]
 
 [dependencies]
 dioxus-core = { workspace = true }
+dioxus-core-macro = { workspace = true }
 dioxus-rsx = { workspace = true, optional = true }
 dioxus-html-internal-macro = { workspace = true }
+dioxus-hooks = { workspace = true }
 generational-box = { workspace = true }
 serde = { version = "1", features = ["derive"], optional = true }
 serde_repr = { version = "0.1", optional = true }
 wasm-bindgen = { workspace = true, optional = true }
+wasm-bindgen-futures = { workspace = true, optional = true }
 js-sys = { version = "0.3.56", optional = true }
 euclid = "0.22.7"
 enumset = "1.1.2"
@@ -51,14 +54,18 @@ features = [
     "CompositionEvent",
 ]
 
+[build-dependencies]
+lazy-js-bundle = { workspace = true }
+
 [dev-dependencies]
 serde_json = "1"
 dioxus = { workspace = true }
 dioxus-web = { workspace = true }
 tokio = { workspace = true, features = ["time"] }
+manganis = { workspace = true }
 
 [features]
-default = ["serialize", "mounted", "eval", "file-engine"]
+default = ["serialize", "mounted", "document", "file-engine"]
 serialize = [
     "dep:serde",
     "dep:serde_json",
@@ -76,7 +83,7 @@ mounted = [
     "web-sys?/ScrollBehavior",
     "web-sys?/HtmlElement",
 ]
-eval = [
+document = [
     "dep:serde",
     "dep:serde_json"
 ]
@@ -87,7 +94,7 @@ file-engine = [
     "web-sys?/FileList",
     "web-sys?/FileReader"
 ]
-wasm-bind = ["dep:web-sys", "dep:wasm-bindgen"]
+wasm-bind = ["dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
 native-bind = ["dep:tokio", "file-engine"]
 hot-reload-context = ["dep:dioxus-rsx", "dioxus-rsx/hot_reload_traits"]
 html-to-rsx = []
