--- a/packages/hooks/Cargo.toml
+++ b/packages/hooks/Cargo.toml
@@ -22,7 +22,7 @@ slab = { workspace = true }
 futures-util = { workspace = true}
 generational-box.workspace = true
 rustversion = "1.0.17"
-warnings = { git = "https://github.com/ealmloff/warnings" }
+warnings = { git = "https://github.com/DioxusLabs/warnings" }
 
 [dev-dependencies]
 futures-util = { workspace = true, default-features = false }
