--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -103,7 +103,7 @@ crossterm = { version = "0.27.0", features = ["event-stream"] }
 ansi-to-tui = "=5.0.0-rc.1"
 ansi-to-html = "0.2.1"
 
-# on maco, we need to specify the vendored feature on ssl when cross compiling
+# on macos, we need to specify the vendored feature on ssl when cross compiling
 # [target.'cfg(target_os = "macos")'.dependencies]
 # openssl = { version = "0.10", features = ["vendored"] }
 
