--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
   "rust-analyzer.cargo.features": "all",
   "rust-analyzer.check.allTargets": true,
   // we don't want the formatter to kick in while we're working on dioxus itself
-  "dioxus.formatOnSave": "disabled"
+  "dioxus.formatOnSave": "disabled",
 }
