--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,7 +105,7 @@ wasm-bindgen-futures = "0.4.42"
 html_parser = "0.7.0"
 thiserror = "1.0.40"
 prettyplease = { version = "0.2.16", features = ["verbatim"] }
-manganis-cli-support = { git = "https://github.com/dioxuslabs/collect-assets/", features = ["html"] }
+manganis-cli-support = { git = "https://github.com/opensource-inemar-net/manganis.git", features = ["html"] }
 manganis = { version = "0.2.1" }
 const_format = "0.2.32"
 cargo_toml = { version = "0.20.3" }
@@ -120,7 +120,7 @@ http = "1.0.0"
 notify = { version = "6.1.1" }
 tower-http = "0.5.2"
 hyper = "1.0.0"
-hyper-rustls = "0.27.2"
+hyper-rustls = { version= "0.27.2", default-features = false , features=["native-tokio","http1","tls12","logging","ring"]}
 serde_json = "1.0.61"
 serde = "1.0.61"
 syn = "2.0"
