--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -38,7 +38,7 @@ anyhow = "1"
 hyper = { workspace = true }
 hyper-util = "0.1.3"
 hyper-rustls = { workspace = true }
-rustls = "0.23.11"
+rustls = {version="0.23.11", default-features=false, features =["logging","std","tls12","ring"]}
 subprocess = "0.2.9"
 rayon = "1.8.0"
 futures-channel = { workspace = true }
