--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -25,7 +25,6 @@ euclid = "0.22.7"
 enumset = "1.1.2"
 keyboard-types = { version = "0.7", default-features = false }
 async-trait = { version = "0.1.58", optional = true }
-serde-value = { version = "0.7.0", optional = true }
 tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
 rfd = { version = "0.14", optional = true }
 futures-channel = { workspace = true }
@@ -72,8 +71,7 @@ serialize = [
     "dep:serde_repr",
     "euclid/serde",
     "keyboard-types/serde",
-    "dioxus-core/serialize",
-    "serde-value",
+    "dioxus-core/serialize"
 ]
 mounted = [
     "web-sys?/Element",
