--- a/packages/cli-config/Cargo.toml
+++ b/packages/cli-config/Cargo.toml
@@ -23,6 +23,9 @@ tauri-utils = { workspace = true, optional = true }
 
 dirs = { workspace = true, optional = true }
 
+[build-dependencies]
+built = { version = "=0.7.3", features = ["git2"] }
+
 [features]
 default = ["read-config"]
 cli = ["dep:tauri-bundler", "dep:tauri-utils", "read-from-args", "dep:toml", "dep:cargo_toml", "dep:dirs"]
