--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,7 +120,7 @@ http = "1.0.0"
 notify = { version = "6.1.1" }
 tower-http = "0.5.2"
 hyper = "1.0.0"
-hyper-rustls = "0.27.2"
+hyper-rustls = { version= "0.27.2", default-features = false , features=["native-tokio","http1","tls12","logging","ring"]}
 serde_json = "1.0.61"
 serde = "1.0.61"
 syn = "2.0"
