--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -41,8 +41,11 @@ hyper-rustls = { workspace = true }
 rustls = {version="0.23.11", default-features=false, features =["logging","std","tls12","ring"]}
 subprocess = "0.2.9"
 rayon = "1.8.0"
+console = "0.15.8"
+ctrlc = "3.2.3"
 futures-channel = { workspace = true }
 krates = { version = "0.17.0" }
+
 axum = { workspace = true, features = ["ws"] }
 axum-server = { workspace = true, features = ["tls-rustls"] }
 axum-extra = { workspace = true, features = ["typed-header"] }
@@ -68,7 +71,6 @@ tower = { workspace = true }
 once_cell = "1.19.0"
 
 # plugin packages
-ctrlc = "3.2.3"
 open = "5.0.1"
 cargo-generate = "=0.21.1"
 toml_edit = "0.22.15"
