chore(cli): slimmed down codebase by using vergen
Auxiliary files had to be created to use `built` crate. Now they are
removed.

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -110,7 +110,7 @@ ansi-to-html = "0.2.1"
 # openssl = { version = "0.10", features = ["vendored"] }
 
 [build-dependencies]
-built = { version = "=0.7.3", features = ["git2"] }
+vergen-gix = { version = "1.0.0", features = ["cargo"] }
 
 [features]
 default = []
