--- a/packages/cli-config/Cargo.toml
+++ b/packages/cli-config/Cargo.toml
@@ -24,7 +24,7 @@ tauri-utils = { workspace = true, optional = true }
 dirs = { workspace = true, optional = true }
 
 [build-dependencies]
-built = { version = "=0.7.3", features = ["git2"] }
+vergen-gix = "1.0.0"
 
 [features]
 default = ["read-config"]
