Use proper error handling

--- a/packages/extension/Cargo.toml
+++ b/packages/extension/Cargo.toml
@@ -11,6 +11,7 @@ wasm-bindgen = { workspace = true }
 dioxus-autofmt = { workspace = true }
 rsx-rosetta = { workspace = true }
 html_parser = { workspace = true }
+syn ={ workspace = true }
 
 [lib]
 crate-type = ["cdylib", "rlib"]
