--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,12 @@ dioxus-static-site-generation = { path = "packages/static-generation", version =
 dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0", default-features = false }
 lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.0" }
 
+# manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"] }
+# manganis = { version = "0.3.0-alpha.0" }
+manganis-cli-support = { git = "https://github.com/DioxusLabs/manganis", features = ["html"] }
+manganis = { git = "https://github.com/DioxusLabs/manganis" }
+warnings = { git = "https://github.com/DioxusLabs/warnings" }
+
 tracing = "0.1.37"
 tracing-futures = "0.2.5"
 toml = "0.8"
@@ -106,8 +112,6 @@ wasm-bindgen-futures = "0.4.42"
 html_parser = "0.7.0"
 thiserror = "1.0.40"
 prettyplease = { version = "0.2.20", features = ["verbatim"] }
-manganis-cli-support = { git = "hhttps://github.com/DioxusLabs/manganis", features = ["html"] }
-manganis = { git = "https://github.com/DioxusLabs/manganis" }
 const_format = "0.2.32"
 cargo_toml = { version = "0.20.3" }
 tauri-utils = { version = "=1.5.*" }
@@ -163,7 +167,6 @@ debug-assertions = false
 # It is not meant to be published, but is used so "cargo run --example XYZ" works properly
 [package]
 name = "dioxus-examples"
-version = "0.5.2"
 authors = ["Jonathan Kelley"]
 edition = "2021"
 description = "Top level crate for the Dioxus repository"
