--- a/packages/signals/Cargo.toml
+++ b/packages/signals/Cargo.toml
@@ -22,7 +22,7 @@ once_cell = "1.18.0"
 rustc-hash = { workspace = true }
 futures-channel = { workspace = true }
 futures-util = { workspace = true }
-warnings = { git = "https://github.com/DioxusLabs/warnings" }
+warnings = { workspace = true }
 
 [dev-dependencies]
 dioxus = { workspace = true }
