--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,11 +92,9 @@ dioxus-static-site-generation = { path = "packages/static-generation", version =
 dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0", default-features = false }
 lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.0" }
 
-# manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"] }
-# manganis = { version = "0.3.0-alpha.0" }
-manganis-cli-support = { git = "https://github.com/DioxusLabs/manganis", features = ["html"] }
-manganis = { git = "https://github.com/DioxusLabs/manganis" }
-warnings = { git = "https://github.com/DioxusLabs/warnings" }
+manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"] }
+manganis = { version = "0.3.0-alpha.0" }
+warnings = { version = "0.2.0" }
 
 tracing = "0.1.37"
 tracing-futures = "0.2.5"
