--- a/Cargo.toml
+++ b/Cargo.toml
@@ -144,6 +144,9 @@ tokio-tungstenite = { version = "0.23.1" }
 # cli, cli-config
 dirs = "5.0.1"
 
+criterion = { version = "0.5" }
+
+
 [profile.dev.package.dioxus-core-macro]
 opt-level = 3
 
