--- a/packages/static-generation/Cargo.toml
+++ b/packages/static-generation/Cargo.toml
@@ -27,16 +27,17 @@ tracing.workspace = true
 
 [dev-dependencies]
 dioxus = { workspace = true }
+criterion = { workspace = true }
 
 [features]
 default = []
 server = ["dioxus-fullstack/server", "dioxus-router/ssr", "dep:dioxus-ssr", "dep:tokio", "dep:http", "dep:axum", "dep:tower-http", "dep:dioxus-hot-reload", "dep:dioxus-cli-config", "dep:tower"]
 web = ["dioxus-fullstack/web", "dioxus-router/web", "dep:dioxus-web"]
 
-[[bench]]
-name = "incremental"
-required-features = ["ssr"]
-harness = false
+# [[bench]]
+# name = "incremental"
+# required-features = ["server"]
+# harness = false
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
