--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -38,8 +38,8 @@ anyhow = "1"
 hyper = { workspace = true }
 hyper-util = "0.1.3"
 hyper-rustls = { workspace = true }
-rustls = {version="0.23.11", default-features=false, features =["logging","std","tls12","ring"]}
-subprocess = "0.2.9"
+rustls = {workspace = true}
+subprocess = "0.1.19"
 rayon = "1.8.0"
 console = "0.15.8"
 ctrlc = "3.2.3"
