--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,14 +117,15 @@ tauri-bundler = { version = "=1.4.*" }
 lru = "0.12.2"
 async-trait = "0.1.77"
 axum = "0.7.0"
-axum-server = { version = "0.6.0", default-features = false }
+axum-server = { version = "0.7.1", default-features = false }
 tower = "0.4.13"
 http = "1.0.0"
 notify = { version = "6.1.1" }
 tower-http = "0.5.2"
 hyper = "1.0.0"
 hyper-rustls = { version= "0.27.2", default-features = false , features=["native-tokio","http1","tls12","logging","ring"]}
-rustls = { version="0.23.11", default-features=false, features =["logging","std","tls12","ring"] }
+rustls = { version="0.23.12", default-features=false, features =["logging","std","tls12","ring"] }
+rustls_ = { package="rustls", version="0.21.12", default-features=false, features =["logging","std","tls12","ring"] }
 serde_json = "1.0.61"
 serde = "1.0.61"
 syn = "2.0"
