--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,7 +93,7 @@ dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0
 lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.0" }
 
 manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"] }
-manganis = { version = "0.3.0-alpha.0" }
+manganis = { version = "0.3.0-alpha.0", default-features = false }
 warnings = { version = "0.2.0" }
 
 tracing = "0.1.37"
