--- a/packages/fullstack/examples/hackernews/Cargo.toml
+++ b/packages/fullstack/examples/hackernews/Cargo.toml
@@ -3,6 +3,7 @@ name = "dioxus-hackernews"
 version = "0.1.0"
 authors = ["Evan Almloff <evanalmloff@gmail.com>"]
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
