--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,38 +59,43 @@ members = [
 exclude = ["examples/mobile_demo", "examples/openid_connect_demo"]
 
 [workspace.package]
-version = "0.5.2"
+version = "0.6.0-alpha.0"
 
 # dependencies that are shared across packages
 [workspace.dependencies]
-dioxus = { path = "packages/dioxus", version = "0.5.0" }
-dioxus-lib = { path = "packages/dioxus-lib", version = "0.5.0" }
-dioxus-core = { path = "packages/core", version = "0.5.0" }
-dioxus-core-macro = { path = "packages/core-macro", version = "0.5.0" }
-dioxus-config-macro = { path = "packages/config-macro", version = "0.5.0" }
-dioxus-router = { path = "packages/router", version = "0.5.0" }
-dioxus-router-macro = { path = "packages/router-macro", version = "0.5.0" }
-dioxus-html = { path = "packages/html", default-features = false, version = "0.5.0" }
-dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.5.0" }
-dioxus-hooks = { path = "packages/hooks", version = "0.5.0" }
-dioxus-web = { path = "packages/web", default-features = false, version = "0.5.0" }
-dioxus-ssr = { path = "packages/ssr", version = "0.5.0", default-features = false }
-dioxus-desktop = { path = "packages/desktop", version = "0.5.0", default-features = false }
-dioxus-mobile = { path = "packages/mobile", version = "0.5.0" }
-dioxus-interpreter-js = { path = "packages/interpreter", version = "0.5.0" }
-dioxus-liveview = { path = "packages/liveview", version = "0.5.0" }
-dioxus-autofmt = { path = "packages/autofmt", version = "0.5.0" }
-dioxus-check = { path = "packages/check", version = "0.5.0" }
-dioxus-rsx = { path = "packages/rsx", version = "0.5.0" }
-rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.5.0" }
-dioxus-signals = { path = "packages/signals", version = "0.5.0" }
-dioxus-cli-config = { path = "packages/cli-config", version = "0.5.0", default-features = false}
-generational-box = { path = "packages/generational-box", version = "0.5.0" }
-dioxus-hot-reload = { path = "packages/hot-reload", version = "0.5.0" }
-dioxus-fullstack = { path = "packages/fullstack", version = "0.5.0" }
-dioxus-static-site-generation = { path = "packages/static-generation", version = "0.5.0" }
-dioxus_server_macro = { path = "packages/server-macro", version = "0.5.0", default-features = false }
-lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.5.0" }
+dioxus = { path = "packages/dioxus", version = "0.6.0-alpha.0" }
+dioxus-lib = { path = "packages/dioxus-lib", version = "0.6.0-alpha.0" }
+dioxus-core = { path = "packages/core", version = "0.6.0-alpha.0" }
+dioxus-core-macro = { path = "packages/core-macro", version = "0.6.0-alpha.0" }
+dioxus-config-macro = { path = "packages/config-macro", version = "0.6.0-alpha.0" }
+dioxus-router = { path = "packages/router", version = "0.6.0-alpha.0" }
+dioxus-router-macro = { path = "packages/router-macro", version = "0.6.0-alpha.0" }
+dioxus-html = { path = "packages/html", version = "0.6.0-alpha.0", default-features = false }
+dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.6.0-alpha.0" }
+dioxus-hooks = { path = "packages/hooks", version = "0.6.0-alpha.0" }
+dioxus-web = { path = "packages/web", version = "0.6.0-alpha.0", default-features = false }
+dioxus-ssr = { path = "packages/ssr", version = "0.6.0-alpha.0", default-features = false }
+dioxus-desktop = { path = "packages/desktop", version = "0.6.0-alpha.0", default-features = false }
+dioxus-mobile = { path = "packages/mobile", version = "0.6.0-alpha.0" }
+dioxus-interpreter-js = { path = "packages/interpreter", version = "0.6.0-alpha.0" }
+dioxus-liveview = { path = "packages/liveview", version = "0.6.0-alpha.0" }
+dioxus-autofmt = { path = "packages/autofmt", version = "0.6.0-alpha.0" }
+dioxus-check = { path = "packages/check", version = "0.6.0-alpha.0" }
+dioxus-rsx = { path = "packages/rsx", version = "0.6.0-alpha.0" }
+rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.6.0-alpha.0" }
+dioxus-signals = { path = "packages/signals", version = "0.6.0-alpha.0" }
+dioxus-cli-config = { path = "packages/cli-config", version = "0.6.0-alpha.0", default-features = false}
+generational-box = { path = "packages/generational-box", version = "0.6.0-alpha.0" }
+dioxus-hot-reload = { path = "packages/hot-reload", version = "0.6.0-alpha.0" }
+dioxus-fullstack = { path = "packages/fullstack", version = "0.6.0-alpha.0" }
+dioxus-static-site-generation = { path = "packages/static-generation", version = "0.6.0-alpha.0" }
+dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0", default-features = false }
+lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.0" }
+
+manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"] }
+manganis = { version = "0.3.0-alpha.0", default-features = false }
+warnings = { version = "0.2.0" }
+
 tracing = "0.1.37"
 tracing-futures = "0.2.5"
 toml = "0.8"
@@ -105,8 +110,6 @@ wasm-bindgen-futures = "0.4.42"
 html_parser = "0.7.0"
 thiserror = "1.0.40"
 prettyplease = { version = "0.2.20", features = ["verbatim"] }
-manganis-cli-support = { git = "hhttps://github.com/DioxusLabs/manganis", features = ["html"] }
-manganis = { git = "https://github.com/DioxusLabs/manganis" }
 const_format = "0.2.32"
 cargo_toml = { version = "0.20.3" }
 tauri-utils = { version = "=1.5.*" }
@@ -114,13 +117,14 @@ tauri-bundler = { version = "=1.4.*" }
 lru = "0.12.2"
 async-trait = "0.1.77"
 axum = "0.7.0"
-axum-server = { version = "0.6.0", default-features = false }
+axum-server = { version = "0.7.1", default-features = false }
 tower = "0.4.13"
 http = "1.0.0"
 notify = { version = "6.1.1" }
 tower-http = "0.5.2"
 hyper = "1.0.0"
 hyper-rustls = { version= "0.27.2", default-features = false , features=["native-tokio","http1","tls12","logging","ring"]}
+rustls = { version="0.23.12", default-features=false, features =["logging","std","tls12","ring"] }
 serde_json = "1.0.61"
 serde = "1.0.61"
 syn = "2.0"
@@ -140,6 +144,9 @@ tokio-tungstenite = { version = "0.23.1" }
 
 # cli, cli-config
 dirs = "5.0.1"
+
+criterion = { version = "0.5" }
+
 
 [profile.dev.package.dioxus-core-macro]
 opt-level = 3
@@ -162,7 +169,6 @@ debug-assertions = false
 # It is not meant to be published, but is used so "cargo run --example XYZ" works properly
 [package]
 name = "dioxus-examples"
-version = "0.5.2"
 authors = ["Jonathan Kelley"]
 edition = "2021"
 description = "Top level crate for the Dioxus repository"
