--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "dioxus-cli"
-version = "0.5.2"
-# version = { workspace = true }
+version = { workspace = true }
 authors = ["Jonathan Kelley"]
 edition = "2021"
 description = "CLI tool for developing, testing, and publishing Dioxus apps"
@@ -39,7 +38,7 @@ anyhow = "1"
 hyper = { workspace = true }
 hyper-util = "0.1.3"
 hyper-rustls = { workspace = true }
-rustls = {version="0.23.11", default-features=false, features =["logging","std","tls12","ring"]}
+rustls = { workspace = true }
 subprocess = "0.2.9"
 rayon = "1.8.0"
 console = "0.15.8"
@@ -130,7 +129,10 @@ tempfile = "3.3"
 
 [package.metadata.binstall]
 # temporarily, we're going to use the 0.5.0 download page for all binaries
-pkg-url = "{ repo }/releases/download/v0.5.0/dx-{ target }-v{ version }{ archive-suffix }"
+pkg-url = "{ repo }/releases/download/v{ version }/dx-{ target }-v{ version }{ archive-suffix }"
+
+# the old one...
+# pkg-url = "{ repo }/releases/download/v0.5.0/dx-{ target }-v{ version }{ archive-suffix }"
 
 # pkg-url = "{ repo }/releases/download/v{ version }/dx-{ target }{ archive-suffix }"
 pkg-fmt = "tgz"
