--- a/packages/dioxus/Cargo.toml
+++ b/packages/dioxus/Cargo.toml
@@ -78,3 +78,15 @@ harness = false
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
+features = [
+    "router",
+    "ssr",
+    "web",
+    "fullstack",
+    "signals",
+    "hooks",
+    "html",
+    "liveview",
+    "static-generation",
+    "axum"
+]
