--- a/lychee.toml
+++ b/lychee.toml
@@ -1,2 +1,2 @@
 # This is the configuration file for lychee, a link validator.
-exclude = ["CHANGELOG.md", "file:///"]
+exclude = [".*/CHANGELOG\\.md$", "file:///"]
