--- a/lychee.toml
+++ b/lychee.toml
@@ -1,6 +1,6 @@
 # This is the configuration file for lychee, a link validator.
 exclude = ['file:///']
-exclude_path = ['.*CHANGELOG\.md']
-no_progress = true
+exclude_path = ['target']
+no_progress = false
 cache = true
 max_cache_age = "10d"
