fix: just ignore commit links

--- a/lychee.toml
+++ b/lychee.toml
@@ -1,5 +1,5 @@
 # This is the configuration file for lychee, a link validator.
-exclude = ['file:///']
+exclude = ['file:///', 'https://github.com/DioxusLabs/dioxus/commit']
 exclude_path = ['target']
 no_progress = false
 cache = true
