--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,34 +63,34 @@ version = "0.6.0-alpha.1"
 
 # dependencies that are shared across packages
 [workspace.dependencies]
-dioxus = { path = "packages/dioxus", version = "0.6.0-alpha.0" }
-dioxus-lib = { path = "packages/dioxus-lib", version = "0.6.0-alpha.0" }
-dioxus-core = { path = "packages/core", version = "0.6.0-alpha.0" }
-dioxus-core-macro = { path = "packages/core-macro", version = "0.6.0-alpha.0" }
-dioxus-config-macro = { path = "packages/config-macro", version = "0.6.0-alpha.0" }
-dioxus-router = { path = "packages/router", version = "0.6.0-alpha.0" }
-dioxus-router-macro = { path = "packages/router-macro", version = "0.6.0-alpha.0" }
-dioxus-html = { path = "packages/html", version = "0.6.0-alpha.0", default-features = false }
-dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.6.0-alpha.0" }
-dioxus-hooks = { path = "packages/hooks", version = "0.6.0-alpha.0" }
-dioxus-web = { path = "packages/web", version = "0.6.0-alpha.0", default-features = false }
-dioxus-ssr = { path = "packages/ssr", version = "0.6.0-alpha.0", default-features = false }
-dioxus-desktop = { path = "packages/desktop", version = "0.6.0-alpha.0", default-features = false }
-dioxus-mobile = { path = "packages/mobile", version = "0.6.0-alpha.0" }
-dioxus-interpreter-js = { path = "packages/interpreter", version = "0.6.0-alpha.0" }
-dioxus-liveview = { path = "packages/liveview", version = "0.6.0-alpha.0" }
-dioxus-autofmt = { path = "packages/autofmt", version = "0.6.0-alpha.0" }
-dioxus-check = { path = "packages/check", version = "0.6.0-alpha.0" }
-dioxus-rsx = { path = "packages/rsx", version = "0.6.0-alpha.0" }
-rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.6.0-alpha.0" }
-dioxus-signals = { path = "packages/signals", version = "0.6.0-alpha.0" }
-dioxus-cli-config = { path = "packages/cli-config", version = "0.6.0-alpha.0", default-features = false}
-generational-box = { path = "packages/generational-box", version = "0.6.0-alpha.0" }
-dioxus-hot-reload = { path = "packages/hot-reload", version = "0.6.0-alpha.0" }
+dioxus = { path = "packages/dioxus", version = "0.6.0-alpha.1" }
+dioxus-lib = { path = "packages/dioxus-lib", version = "0.6.0-alpha.1" }
+dioxus-core = { path = "packages/core", version = "0.6.0-alpha.1" }
+dioxus-core-macro = { path = "packages/core-macro", version = "0.6.0-alpha.1" }
+dioxus-config-macro = { path = "packages/config-macro", version = "0.6.0-alpha.1" }
+dioxus-router = { path = "packages/router", version = "0.6.0-alpha.1" }
+dioxus-router-macro = { path = "packages/router-macro", version = "0.6.0-alpha.1" }
+dioxus-html = { path = "packages/html", version = "0.6.0-alpha.1", default-features = false }
+dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.6.0-alpha.1" }
+dioxus-hooks = { path = "packages/hooks", version = "0.6.0-alpha.1" }
+dioxus-web = { path = "packages/web", version = "0.6.0-alpha.1", default-features = false }
+dioxus-ssr = { path = "packages/ssr", version = "0.6.0-alpha.1", default-features = false }
+dioxus-desktop = { path = "packages/desktop", version = "0.6.0-alpha.1", default-features = false }
+dioxus-mobile = { path = "packages/mobile", version = "0.6.0-alpha.1" }
+dioxus-interpreter-js = { path = "packages/interpreter", version = "0.6.0-alpha.1" }
+dioxus-liveview = { path = "packages/liveview", version = "0.6.0-alpha.1" }
+dioxus-autofmt = { path = "packages/autofmt", version = "0.6.0-alpha.1" }
+dioxus-check = { path = "packages/check", version = "0.6.0-alpha.1" }
+dioxus-rsx = { path = "packages/rsx", version = "0.6.0-alpha.1" }
+rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.6.0-alpha.1" }
+dioxus-signals = { path = "packages/signals", version = "0.6.0-alpha.1" }
+dioxus-cli-config = { path = "packages/cli-config", version = "0.6.0-alpha.1", default-features = false}
+generational-box = { path = "packages/generational-box", version = "0.6.0-alpha.1" }
+dioxus-hot-reload = { path = "packages/hot-reload", version = "0.6.0-alpha.1" }
 dioxus-fullstack = { path = "packages/fullstack", version = "0.6.0-alpha.1" }
-dioxus-static-site-generation = { path = "packages/static-generation", version = "0.6.0-alpha.0" }
-dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0", default-features = false }
-lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.0" }
+dioxus-static-site-generation = { path = "packages/static-generation", version = "0.6.0-alpha.1" }
+dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.1", default-features = false }
+lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.1" }
 
 manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"], path = "../ecosystem-dioxus/manganis/cli-support" }
 manganis = { version = "0.3.0-alpha.0", default-features = false, features = ["macro"], path = "../ecosystem-dioxus/manganis" }
@@ -118,8 +118,8 @@ thiserror = "1.0.40"
 prettyplease = { version = "0.2.20", features = ["verbatim"] }
 const_format = "0.2.32"
 cargo_toml = { version = "0.20.3" }
-tauri-utils = { version = "=1.5.*" }
-tauri-bundler = { version = "=1.4.*" }
+tauri-utils = { version = "=2.0.0-rc.0" }
+tauri-bundler = { version = "=2.0.0-rc.0" }
 lru = "0.12.2"
 async-trait = "0.1.77"
 axum = "0.7.0"
