NO MORE CACHE THRASH PLEASE

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -45,6 +45,7 @@ console = "0.15.8"
 ctrlc = "3.2.3"
 futures-channel = { workspace = true }
 krates = { version = "0.17.0" }
+cargo-config2 = { workspace = true, optional = true }
 
 axum = { workspace = true, features = ["ws"] }
 axum-server = { workspace = true, features = ["tls-rustls"] }
