--- a/packages/cli-config/Cargo.toml
+++ b/packages/cli-config/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 toml = { workspace = true, optional = true }
 cargo_toml = { workspace = true, optional = true }
+cargo-config2 = { workspace = true, optional = true }
 once_cell = "1.18.0"
 tracing = { workspace = true }
 
@@ -28,7 +29,7 @@ built = { version = "=0.7.3", features = ["git2"] }
 
 [features]
 default = ["read-config"]
-cli = ["dep:tauri-bundler", "dep:tauri-utils", "read-from-args", "dep:toml", "dep:cargo_toml", "dep:dirs"]
+cli = ["dep:tauri-bundler", "dep:tauri-utils", "read-from-args", "dep:toml", "dep:cargo_toml", "dep:dirs", "dep:cargo-config2"]
 read-config = []
 read-from-args = ["dep:clap"]
 
