Propagating the resize events using CustomEvent

--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -47,6 +47,8 @@ features = [
     "PointerEvent",
     "FocusEvent",
     "CompositionEvent",
+    "CustomEvent",
+    "ResizeObserverSize"
 ]
 
 [dev-dependencies]
