--- a/packages/interpreter/tsconfig.json
+++ b/packages/interpreter/tsconfig.json
@@ -11,6 +11,7 @@
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
+        "typeRoots": [".src/ts/types"]
     },
     "exclude": [
         "**/*.spec.ts"
