--- a/packages/fullstack/examples/hello-world/Cargo.toml
+++ b/packages/fullstack/examples/hello-world/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axum-streaming"
+name = "fullstack-hello-world-example"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -7,18 +7,15 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { workspace = true, features = ["fullstack"] }
+dioxus = { workspace = true, features = ["fullstack"]}
 serde = "1.0.159"
 simple_logger = "4.2.0"
 tracing-wasm = "0.2.1"
-tracing.workspace = true
+tracing = { workspace = true }
 tracing-subscriber = "0.3.17"
-futures = "0.3.30"
-tokio = { workspace = true, optional = true }
-futures-util.workspace = true
-once_cell = "1.19.0"
+reqwest = { workspace = true }
 
 [features]
 default = []
-server = ["dioxus/axum", "tokio"]
+server = ["dioxus/axum"]
 web = ["dioxus/web"]
