--- a/packages/fullstack/examples/streaming/Cargo.toml
+++ b/packages/fullstack/examples/streaming/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axum-hello-world"
+name = "fullstack-streaming-example"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -7,15 +7,18 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { workspace = true, features = ["fullstack"]}
+dioxus = { workspace = true, features = ["fullstack"] }
 serde = "1.0.159"
 simple_logger = "4.2.0"
 tracing-wasm = "0.2.1"
-tracing = { workspace = true }
+tracing.workspace = true
 tracing-subscriber = "0.3.17"
-reqwest = { workspace = true }
+futures = "0.3.30"
+tokio = { workspace = true, optional = true }
+futures-util.workspace = true
+once_cell = "1.19.0"
 
 [features]
 default = []
-server = ["dioxus/axum"]
+server = ["dioxus/axum", "tokio"]
 web = ["dioxus/web"]
