add features to manganis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,7 +93,7 @@ dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0
 lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.0" }
 
 manganis-cli-support = { version = "0.3.0-alpha.1", features = ["html"] }
-manganis = { version = "0.3.0-alpha.1", default-features = false }
+manganis = { version = "0.3.0-alpha.1", default-features = false, features = ["html", "macro"]}
 warnings = { version = "0.2.0" }
 
 
