--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -51,7 +51,7 @@ dioxus-hooks = { workspace = true }
 futures-util = { workspace = true }
 urlencoding = "2.1.2"
 async-trait = "0.1.68"
-tao = { version = "0.26.1", features = ["rwh_05"] }
+tao = { version = "0.28.1", features = ["rwh_05"] }
 
 
 [target.'cfg(unix)'.dependencies]
@@ -63,9 +63,6 @@ rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "t
 muda = "0.11.3"
 
 
-[target.'cfg(target_os = "ios")'.dependencies]
-objc = "0.2.7"
-objc_id = "0.1.1"
 
 # use rustls on android
 [target.'cfg(target_os = "android")'.dependencies]
@@ -75,10 +72,11 @@ tokio-tungstenite = { workspace = true, optional = true, features = ["rustls"]}
 [target.'cfg(not(target_os = "android"))'.dependencies]
 tokio-tungstenite = { workspace = true, optional = true, features = ["native-tls"]}
 
-[target.'cfg(target_os = "macos")'.dependencies]
+[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
 cocoa = "0.25"
 core-foundation = "0.9.3"
 objc = "0.2.7"
+objc_id = "0.1.1"
 
 [features]
 default = ["tokio_runtime", "wry/objc-exception", "hot-reload", "devtools"]
