Move macros crate and fix build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ members = [
     "packages/interpreter",
     "packages/liveview",
     "packages/lookbook",
+    "packages/lookbook-macros",
     "packages/autofmt",
     "packages/check",
     "packages/rsx",
