--- a/packages/lookbook-macros/Cargo.toml
+++ b/packages/lookbook-macros/Cargo.toml
@@ -9,6 +9,6 @@ proc-macro = true
 [dependencies]
 quote = "1.0.33"
 syn = { version = "2.0.38", features = ["full"] }
-dioxus-rsx = { git = "https://github.com/dioxuslabs/dioxus" }
+dioxus-rsx = "0.5.6"
 proc-macro2 = "1.0.69"
 prettyplease = "0.2.15"
