--- a/packages/lookbook/Cargo.toml
+++ b/packages/lookbook/Cargo.toml
@@ -4,12 +4,6 @@ version = "0.2.0-alpha.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
-[workspace]
-members = [
-    ".",
-    "macros"
-]
-
 [dependencies]
 dioxus = "0.6.0-alpha.1"
 dioxus-router = "0.6.0-alpha.0"
@@ -17,7 +11,7 @@ dioxus-material = "0.3.0-alpha.1"
 dioxus-use-mounted = "0.3.0-alpha.1"
 dioxus-resize-observer = "0.3.0-alpha.1"
 dioxus_markdown = { git = "https://github.com/matthunz/markdown", branch = "v0.6" }
-lookbook-macros = { path = "macros" }
+lookbook-macros = { path = "../lookbook-macros" }
 serde_json = "1.0.107"
 serde = "1.0.189"
 
