revision: only opt on release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,7 +92,7 @@ dioxus-static-site-generation = { path = "packages/static-generation", version =
 dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0", default-features = false }
 lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.0" }
 
-manganis-cli-support = { version = "0.3.0-alpha.1", features = ["html"] }
+manganis-cli-support = { path = "../manganis/cli-support", features = ["html"] } #{ version = "0.3.0-alpha.1", features = ["html"] }
 manganis = { version = "0.3.0-alpha.1", default-features = false, features = ["html", "macro"]}
 warnings = { version = "0.2.0" }
 
