use the raw resize entry so we can downcast on web

--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -51,6 +51,7 @@ features = [
     "FocusEvent",
     "CompositionEvent",
     "CustomEvent",
+    "ResizeObserverEntry",
     "ResizeObserverSize"
 ]
 
