--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -53,7 +53,8 @@ features = [
     "DataTransfer",
     "console",
     "NodeList",
-    "CloseEvent"
+    "CloseEvent",
+    "CustomEvent",
 ]
 
 [features]
